# containers-bun

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Aptfile  CLAUDE.md  Procfile  README.md  env.d.ts  go.mod  index.js  main.go  package.json  project.toml  pyproject.toml  requirements.txt  tox.ini
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: build.yml  ci.yml  go.yml
.profile.d/: bun.sh
app/: bunfig.toml  env.d.ts  package.json  tsconfig.base.json
app/backend/: .gitignore  biome.json  drizzle.config.ts  env.d.ts  package.json  tsconfig.json
app/backend/drizzle/: 0000_blushing_medusa.sql  0001_giant_omega_flight.sql
app/backend/src/: app.ts  config.ts  index.ts
app/frontend/: .biomelintrc-auto-import.json  .gitignore  CLAUDE.md  auto-imports.d.ts  components.d.ts  index.html  package.json  tsconfig.json
app/frontend/src/: App.vue  main.ts
backend/: .gitignore  package.json  prettier.config.ts
backend/src/: app.ts  config.ts  index.ts  logger.ts
backend/src/__tests__/: admin.test.ts  auth.test.ts  config.test.ts  health.test.ts  mapillary.test.ts  sdc.test.ts  session.test.ts  uploadClient.test.ts  ws.handler.test.ts  ws.validation.test.ts
backend/src/core/: batchStreamer.ts  devAuth.ts  errors.ts  handler.ts  oauthClient.ts  rateLimiter.ts  session.ts
backend/src/db/: schema.ts
buildpacks/bun/: buildpack.toml
frontend/: .biomelintrc-auto-import.json  CLAUDE.md  auto-imports.d.ts  biome.json  components.d.ts  vite.config.ts
frontend/src/: App.vue  main.ts
tests/: test_version.py
(+187 files in other folders)
