[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.19",
    "hatch-vcs>=0.4",
]

[project]
name = "containers-bun"
description = ""
license = "MIT"
requires-python = ">=3.13"
dynamic = [
    "version",
]
dependencies = [
    "click==8.1.7",
    "coloredlogs==15.0.1",
    "django-environ==0.11.2",
    "Jinja2==3.1.3",
]

[project.urls]
"Source code" = "https://github.com/DaxServer/containers-bun"

[project.scripts]
containers-bun = "containers.bun.cli:main"

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.targets.sdist.include = [
    "/LICENSE",
    "/README.md",
    "/src",
    "/tests",
    "/tox.ini",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/containers"]

[tool.isort]
src_paths = ["src", "tests"]
line_length = 78
profile = "black"
force_single_line = true
force_sort_within_sections = true
case_sensitive = false

[tool.flake8]
# Possible via https://pypi.org/project/Flake8-pyproject/
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "dist",
]
format = "pylint"
max_line_length = 120
show-source = true
flake8-import-order = "appnexus"
extend-ignore = [
    "I100",  # Import statements are in the wrong order.
    "I201",  # Missing newline between import groups.
]
